--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-OPENAI_API_KEY="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"
+# OPENAI_API_KEY="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"
 # OPENAI_API_KEY="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"
+OPENAI_API_KEY="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"
 JWT_SECRET_KEY=""
 TOKEN_HEADER_KEY=""
